--- a/BF-1_Biodiversity.qmd
+++ b/BF-1_Biodiversity.qmd
@@ -7,6 +7,7 @@ format:
     link-external-newwindow: true
 toc: true
 editor: visual
+css:  styles.css
 ---
 
 ::: panel-tabset
@@ -96,27 +97,31 @@ Multiple studies have identified climate refugia ([Michalak et al. 2018](https:/
 
 Some Global and Canadian examples of model implementation.
 
-+----------------------------------+-----------------------------------------------------------------------------------------------------------------------------------------------------------------+-------------------------------------------------------------------------------------------------------+
-| Models/                          | Have they been used?                                                                                                                                            | In Canada?                                                                                            |
-|                                  |                                                                                                                                                                 |                                                                                                       |
-| Approaches                       |                                                                                                                                                                 |                                                                                                       |
-+==================================+=================================================================================================================================================================+=======================================================================================================+
-| SDMs - Maxent                    | [Gerstner et al. (2024)](https://royalsocietypublishing.org/doi/full/10.1098/rsta.2023.0057)                                                                    | [Arce et al. (2023)](https://biab2.geobon.org/viewer/SHI_pipeline%3E991b12792ae29500d2defb194aba60d6) |
-|                                  |                                                                                                                                                                 |                                                                                                       |
-|                                  | [Galante et al. (2022)](https://conbio.onlinelibrary.wiley.com/doi/full/10.1111/csp2.12863)                                                                     |                                                                                                       |
-+----------------------------------+-----------------------------------------------------------------------------------------------------------------------------------------------------------------+-------------------------------------------------------------------------------------------------------+
-| SDMs - Generalized Linear Models | [Newbold (2018)](https://royalsocietypublishing.org/doi/full/10.1098/rspb.2018.0792)                                                                            |                                                                                                       |
-+----------------------------------+-----------------------------------------------------------------------------------------------------------------------------------------------------------------+-------------------------------------------------------------------------------------------------------+
-| SDMs - Boosted regression trees  | [Manley et al . (2023)](https://pubmed.ncbi.nlm.nih.gov/36993623/)                                                                                              | [Stralberg et al. (2015)](https://onlinelibrary.wiley.com/doi/full/10.1111/ddi.12356)                 |
-|                                  |                                                                                                                                                                 |                                                                                                       |
-|                                  | [Newbold (2018)](https://royalsocietypublishing.org/doi/full/10.1098/rspb.2018.0792)                                                                            |                                                                                                       |
-+----------------------------------+-----------------------------------------------------------------------------------------------------------------------------------------------------------------+-------------------------------------------------------------------------------------------------------+
-| Spatial Bayesian SDMs            | [Redding et al. (2017)](https://pubmed.ncbi.nlm.nih.gov/29190296/)                                                                                              | [Adde et al. (2020)](https://onlinelibrary.wiley.com/doi/full/10.1111/ddi.13129)                      |
-|                                  |                                                                                                                                                                 |                                                                                                       |
-|                                  | [Weithase et al. (2024)](https://onlinelibrary.wiley.com/doi/full/10.1111/geb.13819?campaign=woletoc)                                                           |                                                                                                       |
-|                                  |                                                                                                                                                                 |                                                                                                       |
-|                                  | [Kralicek et al. (2022)](https://repository.library.noaa.gov/pdfjs/web/viewer.html?file=https://repository.library.noaa.gov/view/noaa/53701/noaa_53701_DS1.pdf) |                                                                                                       |
-+----------------------------------+-----------------------------------------------------------------------------------------------------------------------------------------------------------------+-------------------------------------------------------------------------------------------------------+
++---------------------------------------------------------------+-----------------------------------------------------------------------------------------------------------------------------------------------------------------+-------------------------------------------------------------------------------------------------------+
+| Models/                                                       | Have they been used?                                                                                                                                            | In Canada?                                                                                            |
+|                                                               |                                                                                                                                                                 |                                                                                                       |
+| Approaches                                                    |                                                                                                                                                                 |                                                                                                       |
++===============================================================+=================================================================================================================================================================+=======================================================================================================+
+| SDMs - Maxent                                                 | [Gerstner et al. (2024)](https://royalsocietypublishing.org/doi/full/10.1098/rsta.2023.0057)                                                                    | [Arce et al. (2023)](https://biab2.geobon.org/viewer/SHI_pipeline%3E991b12792ae29500d2defb194aba60d6) |
+|                                                               |                                                                                                                                                                 |                                                                                                       |
+|                                                               | [Galante et al. (2022)](https://conbio.onlinelibrary.wiley.com/doi/full/10.1111/csp2.12863)                                                                     |                                                                                                       |
++---------------------------------------------------------------+-----------------------------------------------------------------------------------------------------------------------------------------------------------------+-------------------------------------------------------------------------------------------------------+
+| SDMs - Generalized Linear Models                              | [Newbold (2018)](https://royalsocietypublishing.org/doi/full/10.1098/rspb.2018.0792)                                                                            |                                                                                                       |
++---------------------------------------------------------------+-----------------------------------------------------------------------------------------------------------------------------------------------------------------+-------------------------------------------------------------------------------------------------------+
+| SDMs - Boosted regression trees                               | [Manley et al . (2023)](https://pubmed.ncbi.nlm.nih.gov/36993623/)                                                                                              | [Stralberg et al. (2015)](https://onlinelibrary.wiley.com/doi/full/10.1111/ddi.12356)                 |
+|                                                               |                                                                                                                                                                 |                                                                                                       |
+|                                                               | [Newbold (2018)](https://royalsocietypublishing.org/doi/full/10.1098/rspb.2018.0792)                                                                            |                                                                                                       |
++---------------------------------------------------------------+-----------------------------------------------------------------------------------------------------------------------------------------------------------------+-------------------------------------------------------------------------------------------------------+
+| Spatial Bayesian SDMs                                         | [Redding et al. (2017)](https://pubmed.ncbi.nlm.nih.gov/29190296/)                                                                                              | [Adde et al. (2020)](https://onlinelibrary.wiley.com/doi/full/10.1111/ddi.13129)                      |
+|                                                               |                                                                                                                                                                 |                                                                                                       |
+|                                                               | [Weithase et al. (2024)](https://onlinelibrary.wiley.com/doi/full/10.1111/geb.13819?campaign=woletoc)                                                           |                                                                                                       |
+|                                                               |                                                                                                                                                                 |                                                                                                       |
+|                                                               | [Kralicek et al. (2022)](https://repository.library.noaa.gov/pdfjs/web/viewer.html?file=https://repository.library.noaa.gov/view/noaa/53701/noaa_53701_DS1.pdf) |                                                                                                       |
++---------------------------------------------------------------+-----------------------------------------------------------------------------------------------------------------------------------------------------------------+-------------------------------------------------------------------------------------------------------+
+| Integrated species distribution modelling                     | ibis.iSDM ([Jung 2023](https://www.sciencedirect.com/science/article/pii/S1574954123001565))                                                                    |                                                                                                       |
++---------------------------------------------------------------+-----------------------------------------------------------------------------------------------------------------------------------------------------------------+-------------------------------------------------------------------------------------------------------+
+| Standards for distribution models in biodiversity assessments | [Araújo et al. (2019)](https://www.science.org/doi/10.1126/sciadv.aat4858)                                                                                      |                                                                                                       |
++---------------------------------------------------------------+-----------------------------------------------------------------------------------------------------------------------------------------------------------------+-------------------------------------------------------------------------------------------------------+
 :::
 
 ::: {.callout-note collapse="true"}
@@ -247,6 +252,12 @@ Some Global and Canadian examples of model implementation.
 +---------------------------------------------------------------------------------------------------------------------------------------------------+------------------------------------------------------------------------------------------------------------+-----------------------------------------------------------------+
 :::
 
+::: {.callout-note collapse="true"}
+## Integrated community models
+
+[Zipkin et al. (2023)](https://besjournals.onlinelibrary.wiley.com/doi/full/10.1111/1365-2656.14012)
+:::
+
 **Ecosystems**
 
 ::: {.callout-note collapse="true"}
@@ -357,6 +368,8 @@ Some Global and Canadian examples of model implementation.
 |                                                                                                        |                                                                                                                                                                                                  |                                                                                                                  |
 |                                                                                                        | [Fricko et al. (2017)](https://www.sciencedirect.com/science/article/pii/S0959378016300784?via%3Dihub)                                                                                           |                                                                                                                  |
 +--------------------------------------------------------------------------------------------------------+--------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+------------------------------------------------------------------------------------------------------------------+
+| Machine learning                                                                                       | [Stepinski (2024)](https://www.biorxiv.org/content/biorxiv/early/2024/07/17/2024.07.14.603429.full.pdf?%3Fcollection=)                                                                           |                                                                                                                  |
++--------------------------------------------------------------------------------------------------------+--------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+------------------------------------------------------------------------------------------------------------------+
 :::
 
 ::: {.callout-note collapse="true"}
@@ -453,10 +466,36 @@ Some Global and Canadian examples of model implementation.
 +--------------------+-----------------------------------------------------------------------------------------------------------------------------------------------------+-------------------------------------------------------------------------------------------------------------------------+
 :::
 
+::: {.callout-note collapse="true"}
+## General Ecosystem Models
+
+Global biosphere model that captures the ecological processes shaping biological communities.
+
+"The Madingley model is an entirely new approach to modelling ecosystems and biodiversity. It is different from existing models as it includes both marine and terrestrial ecosystems, and marine and terrestrial human pressures -- fisheries, agriculture, and climate change, for example. It is global in scope but can be applied regionally or nationally, and allows for unpredictable behaviour to emerge -- meaning that food webs can shift and ecosystems can radically alter. It is [published and described in the scientific peer-reviewed literature](https://journals.plos.org/plosbiology/article?id=10.1371/journal.pbio.1001841), and is open for anyone to use and modify" ([The Madingley Model](https://madingley.github.io/about/)).
+
+This section is under construction!
+
+**Assessment of Status**
+
+Some Global and Canadian examples of model implementation.
+
++---------------------+--------------------------------------------------------------------------------------------------------------------+------------+
+| Models/Approaches   | Have they been used?                                                                                               | In Canada? |
++=====================+====================================================================================================================+============+
+| The Madingley Model | [Harfoot et al. (2014)](https://journals.plos.org/plosbiology/article/info%3Adoi%2F10.1371%2Fjournal.pbio.1001841) |            |
+|                     |                                                                                                                    |            |
+|                     | [Barychka et al. (2021)](https://nsojournals.onlinelibrary.wiley.com/doi/full/10.1111/oik.07748)                   |            |
+|                     |                                                                                                                    |            |
+|                     | [Hoeks et al. (2021)](https://onlinelibrary.wiley.com/doi/full/10.1111/geb.13354)                                  |            |
++---------------------+--------------------------------------------------------------------------------------------------------------------+------------+
+:::
+
+<a href="#top">Back to top</a>
+
 ## Tools
 
 +--------------------+---------------------------------------------------------+-------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+-------------------------------------------------------------------------------------------------------------------------------------------+
-| Biodviersity facet | Purpose                                                 | Tools                                                                                                                                                                                                 | Supporting                                                                                                                                |
+| Biodiversity facet | Purpose                                                 | Tools                                                                                                                                                                                                 | Supporting                                                                                                                                |
 |                    |                                                         |                                                                                                                                                                                                       |                                                                                                                                           |
 |                    |                                                         |                                                                                                                                                                                                       | Organization                                                                                                                              |
 +====================+=========================================================+=======================================================================================================================================================================================================+===========================================================================================================================================+
@@ -505,6 +544,8 @@ Some Global and Canadian examples of model implementation.
 |                    | Assessment                                              | [MESSAGEix-GLOBIOM](https://docs.messageix.org/projects/global/en/latest/)                                                                                                                            | International Institute for Applied Systems Analysis ([IIASA](https://iiasa.ac.at/)), Laxenburg, Austria.                                 |
 |                    |                                                         |                                                                                                                                                                                                       |                                                                                                                                           |
 |                    |                                                         | Global model, covering 11 world regions and was originally developed for the quantification of the so-called Shared Socio-economic Pathways (SSPs).                                                   |                                                                                                                                           |
+|                    |                                                         |                                                                                                                                                                                                       |                                                                                                                                           |
+|                    |                                                         | [GLOBIOM](https://globiom.org/introduction.html)                                                                                                                                                      |                                                                                                                                           |
 +--------------------+---------------------------------------------------------+-------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+-------------------------------------------------------------------------------------------------------------------------------------------+
 |                    | Aquatic food webs                                       | [Ecopath with Ecosim (EwE)](https://ecopath.org/about/#toggle-id-3-closed)                                                                                                                            | [Ecopath International Initiative](https://ecopathinternational.org/), Jeroen Steenbeek, Spain                                            |
 |                    |                                                         |                                                                                                                                                                                                       |                                                                                                                                           |
@@ -512,14 +553,24 @@ Some Global and Canadian examples of model implementation.
 +--------------------+---------------------------------------------------------+-------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+-------------------------------------------------------------------------------------------------------------------------------------------+
 |                    | Status of Land cover and biodiversity in Alberta Canada | [Online Reporting for Biodiversity](https://orb.abmi.ca/areas/15)                                                                                                                                     | [Alberta Biodiversity Monitoring Institute](https://maps.abmi.ca/#/?&aoi=15&dataset=34044,34042,34041,34046,34043,34045,&mask=15), Canada |
 +--------------------+---------------------------------------------------------+-------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+-------------------------------------------------------------------------------------------------------------------------------------------+
+|                    | Watersheds report                                       | [Treats](https://watershedreports.wwf.ca/?_ga=2.218999321.1062496991.1718237669-1231982823.1717532421#canada/by/threat-overall/profile)(habitat loss, pollution, etc).                                | WWF Canada                                                                                                                                |
++--------------------+---------------------------------------------------------+-------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+-------------------------------------------------------------------------------------------------------------------------------------------+
+|                    | Caribou status                                          | [mineral exploration effects](https://wcs-global.maps.arcgis.com/apps/MapJournal/index.html?appid=69ce6f567b4e415d8e3bb6e4c8634b88)                                                                   | WCS                                                                                                                                       |
++--------------------+---------------------------------------------------------+-------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+-------------------------------------------------------------------------------------------------------------------------------------------+
+|                    | General Ecosystem Models                                | [Hoeks et al. (2021)](https://onlinelibrary.wiley.com/doi/full/10.1111/geb.13354)                                                                                                                     |                                                                                                                                           |
+|                    |                                                         |                                                                                                                                                                                                       |                                                                                                                                           |
+|                    |                                                         | [MadingleyR R package](https://github.com/MadingleyR/MadingleyR)                                                                                                                                      |                                                                                                                                           |
++--------------------+---------------------------------------------------------+-------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+-------------------------------------------------------------------------------------------------------------------------------------------+
+
+<a href="#top">Back to top</a>
 
 ## Partners
 
-In construction!!
+[**This section is under construction!**]{style="color:red;"}
 
 ## Datasets
 
-In construction!!
+[**This section is under construction!**]{style="color:red;"}
 
 To review: Aligning data with decisions to address the biodiversity crisis ([Gerber & Iacona 2024](https://journals.plos.org/plosbiology/article?id=10.1371/journal.pbio.3002683#pbio.3002683.ref008)), and ([Hawkins 2024](https://journals.plos.org/plosbiology/article?id=10.1371/journal.pbio.3002689)),
 
@@ -527,7 +578,15 @@ To review: Aligning data with decisions to address the biodiversity crisis ([Ger
 
 [DataBasin](https://databasin.org/)
 
+[Canadian Institute of ecology and evolution](https://www.ciee-icee.ca/datasets.html)
+
+ECCC
+
+eBird
+
+BBS = Breeding Bird Survey
+
 ## Guidance for action
 
-In construction!!
+[**This section is under construction!**]{style="color:red;"}
 :::
