--- a/BF-5_Wetlands.qmd
+++ b/BF-5_Wetlands.qmd
@@ -1,5 +1,5 @@
 ---
-title: "BF-5_Wetlands"
+title: "BF-5: Wetlands"
 format:
   html:
     self-contained: true
@@ -7,12 +7,13 @@ format:
     link-external-newwindow: true
 toc: true
 editor: visual
+css:  styles.css
 ---
 
 ::: panel-tabset
 ## Introduction
 
-In construction!!
+[**This section is under construction!**]{style="color:red;"}
 
 The extent and dynamics of wetlands in a region should be also modelled and included in further assessments.
 
@@ -23,6 +24,8 @@ For instance, the Wetland Area and Dynamics for Methane Modeling (WAD2M, [Zhang 
 Others have used open source and high resolution data, and convolutional networks models to map local wetlands at 1 meter spatial resolution ([Mainali et al. 2023](https://www.sciencedirect.com/science/article/pii/S0048969722077257)).
 
 Tracking global change in wetlands extent, assessment and conservation status have been implemented. For instance,  the Wetland Extent Trend index developed by [Dixon et al. (2016)](https://www.sciencedirect.com/science/article/abs/pii/S0006320715301476) (not well documented), the evaluation of wetland loss at coarse spatial resolution over the past three centuries shows that the HJBL is practically intact ([Fluet-Choiunard et al. 2023](https://www.nature.com/articles/s41586-022-05572-6.epdf?sharing_token=T_gy2x7t3BcIVNW7LADNItRgN0jAjWel9jnR3ZoTv0PbHROEZ7UgcrLuGBROGGb5myeKrDMguIKVy0wCrjzHBxfEZYpCWx4muajTIuHlInrwffm5Y023LgLLhvePPHgTCOO2B9Qt_6C6Gq-91rlsFFAjl4qkSzz2YwOV4FheYH0FW63SVw9p6WR9QByOu5gbRuEprF1v1f5FNTr2CfETzvYsWwXWLAi8Z08IzSCLvAol0HGRHE1BUmefqTpn_ZtQoi0q_g_65ajKmPNUivmU0ttKMaGL1aBnU9RNq2rr84kCG9wSXiv-0aAimeNCiYUx&tracking_referrer=www.theguardian.com)), and the current conservation status by [Reis et al. (2017)](https://academic.oup.com/bioscience/article/67/6/523/3859715?login=false) shows that most of the HJBL region is unprotected, except for some Ramsar sites and some protected areas.
+
+<a href="#top">Back to top</a>
 
 ## Models
 
@@ -122,29 +125,33 @@ Some Global and Canadian examples of model implementation.
 
 ## Tools
 
-+------------------------------------------------------------------------------------------------------------------+-----------------------------------------------------------------------------------+--------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
-| Purpose                                                                                                          | Tools                                                                             | Supporting                                                                                                                                                                                                                                                                                                                                             |
-|                                                                                                                  |                                                                                   |                                                                                                                                                                                                                                                                                                                                                        |
-|                                                                                                                  |                                                                                   | Organization                                                                                                                                                                                                                                                                                                                                           |
-+==================================================================================================================+===================================================================================+========================================================================================================================================================================================================================================================================================================================================================+
-| Mapping wetlands                                                                                                 | [Canadian wetland inventory](https://maps.ducks.ca/cwi/)                          |                                                                                                                                                                                                                                                                                                                                                        |
-+------------------------------------------------------------------------------------------------------------------+-----------------------------------------------------------------------------------+--------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
-|                                                                                                                  | [The Wetland Intrinsic Potential Tool (WIP)](https://zenodo.org/records/10019936) | [Halibinsky et al. (2022)](https://hess.copernicus.org/articles/27/3687/2023/)                                                                                                                                                                                                                                                                         |
-+------------------------------------------------------------------------------------------------------------------+-----------------------------------------------------------------------------------+--------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
-| It offers a toolbox for analysis and processing satellite imagery and for building models, maps and applications | [GlobWetland Africa](http://globwetland-africa.org/)                              | [GlobWetland Africa](http://globwetland-africa.org/?page_id=7) is a large Earth Observation application project funded by the European Space Agency (ESA) in partnership with the African Team of the Ramsar convention on wetlands                                                                                                                    |
-+------------------------------------------------------------------------------------------------------------------+-----------------------------------------------------------------------------------+--------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
-| Practical tools and resources to better understand and conserve wetlands, Canada                                 | [Wetland Network](https://www.wetlandnetwork.ca/index.php)                        | WetlandNetwork is a project of the North American Wetlands Conservation Council (NAWCC) Canada, a government- non governmental partnership whose mission is to provide national leadership on wetlands, waterfowl and wetland dependent species conservation for Canadians through the North American Waterfowl Management Plan and other initiatives. |
-+------------------------------------------------------------------------------------------------------------------+-----------------------------------------------------------------------------------+--------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
-| Status of Land cover and biodiversity in Alberta Canada (there is a section for wetlands)                        | [Online reporting for Biodiversity](https://orb.abmi.ca/areas/15)                 | [Alberta Biodiversity Monitoring Institute](https://maps.abmi.ca/#/?&aoi=15&dataset=34044,34042,34041,34046,34043,34045,&mask=15)                                                                                                                                                                                                                      |
-+------------------------------------------------------------------------------------------------------------------+-----------------------------------------------------------------------------------+--------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
++------------------------------------------------------------------------------------------------------------------+---------------------------------------------------------------------------------------------------+--------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
+| Purpose                                                                                                          | Tools                                                                                             | Supporting                                                                                                                                                                                                                                                                                                                                             |
+|                                                                                                                  |                                                                                                   |                                                                                                                                                                                                                                                                                                                                                        |
+|                                                                                                                  |                                                                                                   | Organization                                                                                                                                                                                                                                                                                                                                           |
++==================================================================================================================+===================================================================================================+========================================================================================================================================================================================================================================================================================================================================================+
+| Mapping wetlands                                                                                                 | [Canadian wetland inventory](https://maps.ducks.ca/cwi/)                                          |                                                                                                                                                                                                                                                                                                                                                        |
++------------------------------------------------------------------------------------------------------------------+---------------------------------------------------------------------------------------------------+--------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
+|                                                                                                                  | [The Wetland Intrinsic Potential Tool (WIP)](https://zenodo.org/records/10019936)                 | [Halibinsky et al. (2022)](https://hess.copernicus.org/articles/27/3687/2023/)                                                                                                                                                                                                                                                                         |
++------------------------------------------------------------------------------------------------------------------+---------------------------------------------------------------------------------------------------+--------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
+| It offers a toolbox for analysis and processing satellite imagery and for building models, maps and applications | [GlobWetland Africa](http://globwetland-africa.org/)                                              | [GlobWetland Africa](http://globwetland-africa.org/?page_id=7) is a large Earth Observation application project funded by the European Space Agency (ESA) in partnership with the African Team of the Ramsar convention on wetlands                                                                                                                    |
++------------------------------------------------------------------------------------------------------------------+---------------------------------------------------------------------------------------------------+--------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
+| Practical tools and resources to better understand and conserve wetlands, Canada                                 | [Wetland Network](https://www.wetlandnetwork.ca/index.php)                                        | WetlandNetwork is a project of the North American Wetlands Conservation Council (NAWCC) Canada, a government- non governmental partnership whose mission is to provide national leadership on wetlands, waterfowl and wetland dependent species conservation for Canadians through the North American Waterfowl Management Plan and other initiatives. |
++------------------------------------------------------------------------------------------------------------------+---------------------------------------------------------------------------------------------------+--------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
+| Status of Land cover and biodiversity in Alberta Canada (there is a section for wetlands)                        | [Online reporting for Biodiversity](https://orb.abmi.ca/areas/15)                                 | [Alberta Biodiversity Monitoring Institute](https://maps.abmi.ca/#/?&aoi=15&dataset=34044,34042,34041,34046,34043,34045,&mask=15)                                                                                                                                                                                                                      |
++------------------------------------------------------------------------------------------------------------------+---------------------------------------------------------------------------------------------------+--------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
+| Remote sensing and machine learning                                                                              | [Jafarzadeh et al. (2022)](https://www.mdpi.com/2072-4292/14/23/6104#B156-remotesensing-14-06104) |                                                                                                                                                                                                                                                                                                                                                        |
++------------------------------------------------------------------------------------------------------------------+---------------------------------------------------------------------------------------------------+--------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
+
+<a href="#top">Back to top</a>
 
 ## Partners
 
-In construction!!
+[**This section is under construction!**]{style="color:red;"}
 
 ## Datasets
 
-In construction!!
+[**This section is under construction!**]{style="color:red;"}
 
 +--------------------------------------------------------------------------------------------+-----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+-------------+-----------+
 | Description                                                                                | Repository and Layers                                                                                                                                                             | Extent,     | Reference |
@@ -160,7 +167,10 @@ In construction!!
 |                                                                                            | [GEO WETLANDS](https://geowetlands.org/knowledge-base/) (see [PPT](https://www.ramsar.org/sites/default/files/documents/library/strp20_agenda_item_5_geo-wetlands_mpaganini.pdf)) |             |           |
 +--------------------------------------------------------------------------------------------+-----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+-------------+-----------+
 
+[**This section is under construction!**]{style="color:red;"}
+
 ## Guidance for action
 
-In construction!!
+[**This section is under construction!**]{style="color:red;"}
+
 :::
